// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H2 component should accept and render passed in styles 1`] = `
<h2
  className="r3v0jj-0 cdBPqM ui-kit-typography-H2-StyledH2"
  style={
    Object {
      "color": "salmon",
    }
  }
>
  Salmon text
</h2>
`;

exports[`the H2 component should render 1`] = `
<h2
  className="r3v0jj-0 cdBPqM ui-kit-typography-H2-StyledH2"
>
  Default H2 text
</h2>
`;

exports[`the H2 component should render a loading state 1`] = `
<mark
  className="ra2rjz-0 gcMOrm show-loading-animation r3v0jj-1 kqMxnS ui-kit-H1-Placeholder ui-kit.Placeholder.Line custom-placeholder"
  width="100%"
/>
`;

exports[`the H2 component should render a loading state with vertical rhythm (padded) 1`] = `
<mark
  className="ra2rjz-0 gcMOrm show-loading-animation r3v0jj-1 iTfMnP ui-kit-H1-Placeholder ui-kit.Placeholder.Line custom-placeholder"
  width="100%"
/>
`;

exports[`the H2 component should render with vertical rhythm (padded) 1`] = `
<h2
  className="r3v0jj-0 gguShV ui-kit-typography-H2-StyledH2"
>
  H2 text with vertical rhythm styled via margin.
</h2>
`;
